       Canon PIXMA i80    (EXPERIMENTAL)
       Canon PIXMA i560   (EXPERIMENTAL)
       Canon PIXMA i850   (EXPERIMENTAL) *1
       Canon PIXMA i860   (EXPERIMENTAL) *1
       Canon PIXMA i865   (EXPERIMENTAL) *1
       Canon PIXMA iP2000 (EXPERIMENTAL)
       Canon PIXMA iP4100 (EXPERIMENTAL)
       Canon PIXMA iP5000 (EXPERIMENTAL)
       Canon PIXMA MP600
       Canon PIXMA MP970

       *1: for compatibility, the original printers are named with
        "old" appended. These old printers will be deprecated in a
        future release.

   6) Support for the following printers was greatly improved, or
      tested:

      Canon PIXMA MX340
      Canon PIXMA MX350
      Canon PIXMA iP4000
      Canon PIXMA MG5100

* Changes from 5.2.6

  1) New printers supported in this release:

     Note that support for all printers marked "EXPERIMENTAL"
     (untested) or "PRELIMINARY" (minimally tested but untuned) is
     subject to change without notice.  Printers not marked
     "EXPERIMENTAL" generally will not change between releases, but
     notice will be given and if possible back compatibility will be
     provided.

     - Canon inkjet printers:

       Canon PIXMA iP1000 (EXPERIMENTAL)
       Canon PIXMA iP1200 (EXPERIMENTAL)
       Canon PIXMA iP1300 (EXPERIMENTAL)
       Canon PIXMA iP1500 (EXPERIMENTAL)
       Canon PIXMA iP1600 (EXPERIMENTAL)
       Canon PIXMA iP1700 (EXPERIMENTAL)
       Canon PIXMA iP1800 (EXPERIMENTAL)
       Canon PIXMA iP1900 (EXPERIMENTAL)
       Canon PIXMA iP2000 (EXPERIMENTAL)
       Canon PIXMA iP2200 (EXPERIMENTAL)
       Canon PIXMA iP2500 (EXPERIMENTAL)
       Canon PIXMA iP2600 (EXPERIMENTAL)
       Canon PIXMA iP2700
       Canon PIXMA iP3100 (EXPERIMENTAL)
       Canon PIXMA iP4700
       Canon PIXMA iP4800 (EXPERIMENTAL)
       Canon PIXMA iP6100D
       Canon PIXMA iP6600D
       Canon PIXMA iX6500 (EXPERIMENTAL)
       Canon PIXMA iX7000 (EXPERIMENTAL)
       Canon PIXMA MG5100
       Canon PIXMA MG5200